# controller/user_controlle.go
@@ -2,6 +2,8 @@ package controller
 
 import (
 	config "BlockApp/conf"
+	"BlockApp/db"
+	"BlockApp/model"
 	"github.com/gin-gonic/gin"
 	"github.com/golang-jwt/jwt/v4"
 	"net/http"
@@ -16,10 +18,6 @@ type Creds struct {
 	Password string `json:"password"`
 }
 
-var users = map[string]string{
-	"admin": "password123",
-}
-
 // 生成JWT Token
 func generateToken(username string) (string, error) {
 	claims := jwt.MapClaims{
@@ -30,17 +28,29 @@ func generateToken(username string) (string, error) {
 	return token.SignedString(config.Config.System.GetJwtSecret())
 }
 
-func (user *UserController) UserLogin(ctx *gin.Context) {
+// UserLogin 用户登录
+// @Summary 用户登录
+// @Description 通过用户名和密码进行登录，并返回 JWT Token
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param request body Creds true "用户登录信息"
+// @Success 200 {object} map[string]string "返回 Token"
+// @Failure 400 {object} map[string]string "请求错误"
+// @Failure 404 {object} map[string]string "用户不存在"
+// @Failure 500 {object} map[string]string "服务器错误"
+// @Router /v1/login [post]
+func (uc *UserController) UserLogin(ctx *gin.Context) {
 	var creds Creds
 	if err := ctx.ShouldBindJSON(&creds); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request"})
 		return
 	}
-
+	var user = model.User{Name: creds.Username}
 	// 校验用户名密码
-	if pwd, exists := users[creds.Username]; !exists || pwd != creds.Password {
-		ctx.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid credentials"})
-		return
+	result := db.PgsqlDB.First(&user, "name = ?", creds.Username)
+	if result.Error != nil {
+		ctx.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
 	}
 
 	// 生成Token
